--- a/.gitignore
+++ b/.gitignore
@@ -118,7 +118,7 @@ out
 dist
 
 # Gatsby files
-
+rust_db.sqlite
 .cache/
 
 # Comment in the public line in if your project uses Gatsby and not Next.js
