--- a/rust_perf_test/Cargo.toml
+++ b/rust_perf_test/Cargo.toml
@@ -6,17 +6,13 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-sqlx = { version = "0.7.2", features = [
-    "postgres",
-    "json",
-    "macros",
-    "runtime-tokio",
-] }
-
 serde_json = "1.0.107"
 serde = { version = "1.0.188", features = ["derive"] }
 tokio = { version = "1.32.0", features = ["full"] }
+tokio-tungstenite = "0.20"
+futures-util = "0.3"
 log = "0.4.20"
 simple_logger = "4.2.0"
 anyhow = "1.0.75"
 dotenv = "0.15.0"
+url = "2.5.4"
