--- a/js-bun-test/.gitignore
+++ b/js-bun-test/.gitignore
@@ -2,6 +2,7 @@
 
 # Logs
 
+bun.
 logs
 _.log
 npm-debug.log_
@@ -9,7 +10,7 @@ yarn-debug.log*
 yarn-error.log*
 lerna-debug.log*
 .pnpm-debug.log*
-
+bun.lockb
 # Diagnostic reports (https://nodejs.org/api/report.html)
 
 report.[0-9]_.[0-9]_.[0-9]_.[0-9]_.json
